--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.8",
 		"axios": "^1.7.9",
+		"dotenv": "^16.4.7",
 		"frontend": "file:",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
