--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
-BACKEND_URL = "https://auth-i0rm.onrender.com"
+RENDER_BACKEND_URL = "https://auth-i0rm.onrender.com/api"
+LOCAL_BACKEND_URL = "http://localhost:8000/api"
+
+NODE_ENV = development
