--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-RENDER_BACKEND_URL = "https://auth-i0rm.onrender.com/api"
-LOCAL_BACKEND_URL = "http://localhost:8000/api"
+VITE_LOCAL_BACKEND_URL=http://localhost:8000/api
+VITE_RENDER_BACKEND_URL=https://auth-i0rm.onrender.com/api
 
-NODE_ENV = development
+
+VITE_NODE_ENV=development
